--- a/WirMachenEinJavaProjekt/src/main/resources/main.fxml
+++ b/WirMachenEinJavaProjekt/src/main/resources/main.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 
 
-<AnchorPane prefHeight="705.0" prefWidth="899.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="test.mainController">
+<AnchorPane prefHeight="705.0" prefWidth="899.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="test.MainWindowController">
    <children>
       <TableView fx:id="studList" layoutX="304.0" layoutY="1.0" prefHeight="698.0" prefWidth="589.0">
          <columns>
