--- a/WirMachenEinJavaProjekt/src/main/resources/addStudent.fxml
+++ b/WirMachenEinJavaProjekt/src/main/resources/addStudent.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.TextField?>
@@ -9,7 +10,6 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
-
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="test.addStudentController">
    <children>
@@ -34,13 +34,14 @@
          <children>
             <Label text="Name" />
             <Label text="Kurs" GridPane.rowIndex="1" />
-            <Label fx:id="javaSlider" text="Java Kenntnisse" GridPane.rowIndex="4" />
+            <Label text="Java Kenntnisse" GridPane.rowIndex="4" />
             <Label text="Firma" GridPane.rowIndex="3" />
             <Label text="Matrikelnummer" GridPane.rowIndex="2" />
-            <Slider majorTickUnit="10.0" minorTickCount="0" showTickMarks="true" snapToTicks="true" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <Slider fx:id="javaSlider" majorTickUnit="10.0" minorTickCount="0" showTickMarks="true" snapToTicks="true" GridPane.columnIndex="1" GridPane.rowIndex="4" />
             <TextField fx:id="nameField" GridPane.columnIndex="1" />
             <TextField fx:id="numberField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <TextField fx:id="companyField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <ComboBox fx:id="courseDropdown" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
          </children>
       </GridPane>
    </children>
