--- a/WirMachenEinJavaProjekt/src/main/resources/addStudent.fxml
+++ b/WirMachenEinJavaProjekt/src/main/resources/addStudent.fxml
@@ -30,18 +30,21 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label text="Name" />
-            <Label text="Kurs" GridPane.rowIndex="1" />
-            <Label text="Java Kenntnisse" GridPane.rowIndex="4" />
-            <Label text="Firma" GridPane.rowIndex="3" />
-            <Label text="Matrikelnummer" GridPane.rowIndex="2" />
-            <Slider fx:id="javaSlider" majorTickUnit="10.0" minorTickCount="0" showTickMarks="true" snapToTicks="true" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <Label text="Vorname" />
+            <Label text="Kurs" GridPane.rowIndex="2" />
+            <Label text="Java Kenntnisse" GridPane.rowIndex="5" />
+            <Label text="Firma" GridPane.rowIndex="4" />
+            <Label text="Matrikelnummer" GridPane.rowIndex="3" />
             <TextField fx:id="nameField" GridPane.columnIndex="1" />
-            <TextField fx:id="numberField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField fx:id="companyField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <ComboBox fx:id="courseDropdown" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="lastNameField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <ComboBox fx:id="courseDropdown" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="numberField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField fx:id="companyField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <Slider fx:id="javaSlider" majorTickUnit="10.0" minorTickCount="0" showTickMarks="true" snapToTicks="true" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <Label text="Nachname" GridPane.rowIndex="1" />
          </children>
       </GridPane>
    </children>
