--- a/WirMachenEinJavaProjekt/src/main/resources/main.fxml
+++ b/WirMachenEinJavaProjekt/src/main/resources/main.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.Pane?>
 
 
-<SplitPane dividerPositions="0.2" prefHeight="700.0" prefWidth="1094.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="test.MainWindowController">
+<SplitPane dividerPositions="0.2" prefHeight="700.0" prefWidth="1094.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="HandlersControllers.MainWindowController">
    <items>
       <Pane>
          <children>
