--- a/WirMachenEinJavaProjekt/src/main/resources/addStudent.fxml
+++ b/WirMachenEinJavaProjekt/src/main/resources/addStudent.fxml
@@ -1,17 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Slider?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="HandlersControllers.addStudentController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="HandlersControllers.addStudentController">
    <children>
       <Button fx:id="addButton" layoutX="491.0" layoutY="337.0" mnemonicParsing="false" onAction="#newStudent" text="Add" />
       <Label layoutX="156.0" layoutY="14.0" text="Student hinzufügen">
@@ -47,5 +41,10 @@
             <Label text="Nachname" GridPane.rowIndex="1" />
          </children>
       </GridPane>
+      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="349.0" layoutY="99.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@DHBW-Logo.svg.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
