--- a/WirMachenEinJavaProjekt/src/main/resources/main.fxml
+++ b/WirMachenEinJavaProjekt/src/main/resources/main.fxml
@@ -35,9 +35,8 @@
                      </font>
                   </Label>
                   <Button fx:id="addStudent" layoutX="46.0" layoutY="42.0" mnemonicParsing="false" onAction="#addStudClick" prefHeight="25.0" prefWidth="124.0" text="Student hinzufügen" />
-                  <Button fx:id="editData" layoutX="46.0" layoutY="101.0" mnemonicParsing="false" onAction="#edit" prefHeight="25.0" prefWidth="126.0" text="Daten bearbeiten" />
-                  <Button fx:id="delStudent" layoutX="46.0" layoutY="149.0" mnemonicParsing="false" onAction="#delStudentOnClick" prefHeight="25.0" prefWidth="126.0" text="Student exmatrikulieren" />
-                  <Button fx:id="addCourse" layoutX="48.0" layoutY="200.0" mnemonicParsing="false" onAction="#addCourseOnClick" prefHeight="25.0" prefWidth="123.0" text="Kurs hinzufügenn" />
+                  <Button fx:id="delStudent" layoutX="47.0" layoutY="92.0" mnemonicParsing="false" onAction="#delStudentOnClick" prefHeight="25.0" prefWidth="126.0" text="Student exmatrikulieren" />
+                  <Button fx:id="addCourse" layoutX="47.0" layoutY="141.0" mnemonicParsing="false" onAction="#manageCourses" prefHeight="25.0" prefWidth="123.0" text="Kurse verwalten" />
                </children></Pane>
         </items>
       </SplitPane>
